tg.tf
# Transit Gateway
resource "aws_ec2_transit_gateway" "example" {
  description = "example"
}
